--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "express-handlebars": "^3.0.0",
     "log": "^1.4.0",
     "stylus": "^0.54.5",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "chokidar": "^2.0.4"
   },
   "devDependencies": {
-    "chokidar": "^2.0.4",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2"
   }
