--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "stylus": "^0.54.5"
   },
   "devDependencies": {
+    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2"
   }
