--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.6",
     "chokidar": "^2.0.4",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "log": "^1.4.0",
     "morgan": "^1.9.0",
-    "rollup": "^0.66.4",
+    "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4",
-    "npm-run-all": "^4.1.3",
+    "event-stream": "^3.3.4",
+    "nodemon": "^1.18.7",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2"
   }
 }
