--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chokidar": "^2.0.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "heroku-ssl-redirect": "0.0.4",
     "log": "^1.4.0",
     "morgan": "^1.9.0",
     "rollup": "^0.66.6",
