--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/core": "^7.1.6",
     "chokidar": "^2.0.4",
+    "compression": "^1.7.4",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "heroku-ssl-redirect": "0.0.4",
